2004-03-16 jnerad

	- (Minor Feature) Added some explanation of Active/Inactive
	Open/Closed Groups in manageGroups.cgi template

	- (Minor Bugfix) Fixed using bad main:: variables instead of good Config::Simple object
	
2004-03-14 jnerad

	- Continuing work on mod_perl compatability move.

	- (Minor Bugfix) (Bug #1649) Corrected problem listing eval vector id's in
	assignmentDetails.cgi, which prevented a user from viewing the
	eval vector.
	
	- (Minor Bugfix) Eliminated problem with adding assignments and
	not associating evaluation vectors with the added assignment.
	(Thank goodness for decent error trapping)

	- (Minor Feature) Added some links to the user's main menu from
	displayAssignments.cgi and editAssignments.cgi
	
2004-03-07 jnerad

	- (Security Bugfix) Users not in the database are no longer
	permitted to log on with empty passwords

	- (Minor Feature) Added feedback for failed logons

	- (Minor Feature) annotateit.cgi is now the "proxy" script that
	performs all the rewriting and display of annotations.  This means
	that we no longer require non-parsed headers to perform our proxy
	operations.

	
2004-02-22 jnerad

	- (Minor Bugfix) Fixed typo preventing addition of user defined
	custom annotations
	

2003-09-14 jnerad

	- (Code Cleanup) Simplified the url rewriting in the HTML
	retrieved to use HTML::TokeParser::Simple.  It is much simpler.
	
2003-09-13 jnerad

	- (Minor Bugfix) State maintenance in the assignments calendar was
	not being maintained.  It is now.

2003-09-11 jnerad

	- (Minor Feature) Added calculation of final score in class
	according to weights associated with assignments and weights
	associated with Evaluations.
	
	- (Minor Feature) Added weights for assignment in groups.  This
	allows us to calculate the final grade.

	- (Minor Bugfix) Fixed bad url in a formaction

	- (Minor Bugfix) Rubrics not being displayed when adding an assignment
	
2003-09-10 jnerad

	- (Minor Bugfix) Administrators can now view all the documents in